--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,32 @@ Package: DownBallotR
 Title: Local and State Election Data via R with Python-Backed Scrapers
 Version: 0.0.0.9000
 Authors@R: c(
-    person("Graham", "Chickering", email = "grahamchickering@gmail.com", role = c("aut", "cre")),
-    person("Chris", "Warshaw", email = "chris.warshaw@georgetown.edu", role = "aut")
-  )
-Description: Provides an R interface for downloading and standardizing local and state election data.
-    The package wraps state-specific Python web scrapers (e.g., Playwright/requests-based) via reticulate,
-    and exposes consistent R functions for querying election availability and results.
+    person(
+        given = "Graham",
+        family = "Chickering",
+        email = "grahamchickering@gmail.com",
+        role = c("aut", "cre")
+    ),
+    person(
+        given = "Chris",
+        family = "Warshaw",
+        email = "chris.warshaw@georgetown.edu",
+        role = "aut"
+    )
+)
+Description: Provides an R interface for downloading and standardizing local
+    and state election data. The package wraps state-specific Python web
+    scrapers (e.g., Playwright- or requests-based) via reticulate and exposes
+    consistent R functions for querying election availability and results.
 License: MIT + file LICENSE
+URL: https://gchickering21.github.io/DownBallotR/,
+     https://github.com/gchickering21/DownBallotR
+BugReports: https://github.com/gchickering21/DownBallotR/issues
 Encoding: UTF-8
+Language: en-US
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
-Depends: 
+Depends:
     R (>= 4.1.0)
 Imports:
     reticulate
@@ -20,8 +35,6 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 3.0.0),
-    withr,
-    pak,
-    remotes
+    withr
 Config/testthat/edition: 3
 VignetteBuilder: knitr
