trying to setup package infrastructure and get NC pipeline working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,8 @@ S3method(print,downballot_python_status)
 export(downballot_install_python)
 export(downballot_python_status)
 export(downballot_use_python)
+export(get_local_elections)
+export(get_nc_results)
+export(get_nc_snapshot)
+export(nc_missing_dates)
+export(nc_snapshot_dates)
